k8s/apps/bases/frontend/maintenance-override-component/maintenance-virtual-service-patch.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracker-frontend-virtual-service
  namespace: frontend
spec:
  http:
  - name: gateway-to-frontend
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: tracker-frontend-maintenance.frontend.svc.cluster.local
